--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Raph</title>
 	<meta name="description" content="Personal website of Raphaël Michnik." />
-	<link rel="icon" type="image/svg+xml" href="delta.svg">
+	<link rel="icon" type="image/svg+xml" href="delta.svg?v=2">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;650&display=swap" rel="stylesheet">
