Improve design: larger delta, email below affiliation, cleaner chevron caret, smooth dropdown animation

--- a/index.html
+++ b/index.html
@@ -20,22 +20,25 @@
 			<div class="identity">
 				<div class="name">Raphaël Michnik</div>
 				<div class="affil">Your Affiliation</div>
+				<a class="email" href="#"
+					onclick="location.href='mailto:'+['first','mail.com'].join('@');return false;">first [at]
+					mail.com</a>
 			</div>
 
 			<nav class="nav" aria-label="Primary">
 				<a class="tab" href="#home" data-route="home">home</a>
 				<a class="tab" href="#work" data-route="work">work</a>
-				<a class="tab" href="#mistk" data-route="mistk">mistk</a>
+				<a class="tab" href="#mistk" data-route="mistk">misc</a>
 			</nav>
 
 			<details class="contacts">
-				<summary>contact</summary>
-				<ul class="contact-list">
-					<li><a href="#" onclick="location.href='mailto:'+['first','mail.com'].join('@');return false;">first
-							[at] mail.com</a></li>
-					<li><a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener">LinkedIn</a></li>
-					<li><a href="https://github.com/raphaelmck" target="_blank" rel="noopener">GitHub</a></li>
-				</ul>
+				<summary>links</summary>
+				<div class="contact-list">
+					<div>
+						<a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener">LinkedIn</a>
+						<a href="https://github.com/raphaelmck" target="_blank" rel="noopener">GitHub</a>
+					</div>
+				</div>
 			</details>
 		</aside>
 
