Add light/dark mode toggle with localStorage persistence

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<summary>links</summary>
 				<div class="contact-list">
 					<div>
-						<a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener">LinkedIn</a>
+						<a href="https://linkedin.com/in/raphaelmck" target="_blank" rel="noopener">LinkedIn</a>
 						<a href="https://github.com/raphaelmck" target="_blank" rel="noopener">GitHub</a>
 					</div>
 				</div>
@@ -50,6 +50,11 @@
 			</noscript>
 		</main>
 	</div>
+
+	<button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
+		<span class="sun">☀️</span>
+		<span class="moon">🌙</span>
+	</button>
 
 	<script src="main.js"></script>
 </body>
