Simplify active tab style to bold only, fix smooth animation for links dropdown

--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 		<aside class="side">
 			<div class="identity">
 				<div class="name">Raphaël Michnik</div>
-				<div class="affil">Your Affiliation</div>
-				<a class="email" href="#"
-					onclick="location.href='mailto:'+['first','mail.com'].join('@');return false;">first [at]
-					mail.com</a>
+				<div class="affil">McGill Math & CS</div>
+				<div class="email">raphael.michnik [at] mail.mcgill.ca</div>
 			</div>
 
 			<nav class="nav" aria-label="Primary">
@@ -45,7 +43,6 @@
 		<main class="main" id="content" tabindex="-1">
 			<!-- JS will render here -->
 			<noscript>
-				<h1>Hi</h1>
 				<p>Please enable JavaScript to view this site.</p>
 			</noscript>
 		</main>
