Cleaned up incomplete pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<nav class="nav" aria-label="Primary">
 				<a class="tab" href="#home" data-route="home">home</a>
 				<a class="tab" href="#work" data-route="work">work</a>
-				<a class="tab" href="#mistk" data-route="mistk">misc</a>
+				<a class="tab" href="#misc" data-route="misc">misc</a>
 			</nav>
 
 			<details class="contacts">
